--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -120,3 +120,20 @@
     @apply bg-background text-foreground;
   }
 }
+
+@layer utilities {
+  .gradient-title {
+    @apply bg-gradient-to-br from-gray-200 via-slate-400 to-blue-600 font-extrabold tracking-tighter pr-2 pb-2 text-transparent bg-clip-text drop-shadow-lg;
+  }
+}
+
+.diamond-background {
+  background-color: #16213c;
+  background-image: linear-gradient(
+      45deg,
+      rgba(255, 255, 255, 0.15) 1px,
+      transparent 1px
+    ),
+    linear-gradient(-45deg, rgba(255, 255, 255, 0.3) 1px, transparent 1px);
+  background-size: 20px 20px;
+}
